#
#  This file is part of the OpenLink Ajax Toolkit (OAT) project
#
#  Copyright (C) 2006 by Ondrej Zara
#  Copyright (C) 2006-2012 by OpenLink Software
#
#  This project is free software; you can redistribute it and/or modify it
#  under the terms of the GNU General Public License as published by the
#  Free Software Foundation; only version 2 of the License, dated June 1991
#
#  This project is distributed in the hope that it will be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software Foundation,
#  Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#

EXTRA_DIST = \
	$(srcdir)/LICENSE \
	$(srcdir)/COPYING \
	$(srcdir)/images/*.gif \
	$(srcdir)/images/*.png \
	$(srcdir)/images/markers/*.png \
	$(srcdir)/styles/*.css \
	$(srcdir)/styles/hover.htc \
	$(srcdir)/toolkit/*.js \
	$(srcdir)/xslt/*.xsl
